@@ -5,6 +5,7 @@
     * 1425 New section header option "encoding" for agent output...
     * 1129 FIX: Windows MSI-Installer: some systems created corrupted check_mk_agent.msi files...
     * 1426 FIX: windows agent: logwatch: no longer reports incorrect formatted texts (japanese characters)...
+    * 1429 FIX: Disabled snmp checktypes are now sorted out before Check_MK contacts the snmp host...
 
     Checks & Agents:
     * 0185 knuerr_rms_humidity, knuerr_rms_temp: Two new Checks to Monitor the Temperature and the Humidity on Knürr RMS Devices
